# urGlance

./: .gitignore  Cargo.toml  README.md  build.rs
core-logic/: Cargo.toml  build.rs
core-logic/scripts/: dolphin_service_menu.desktop  install.sh  nautilus_extension.py  thunar_custom_action.desktop  urglance-overlay.py  urglance-preview.sh  urglance-watcher.py  urglance.service  windows_preview.ps1
core-logic/src/: index.html  main.rs  preview.cpp  preview.h  preview.rs
core-logic/ui/: appwindow.slint  overlay.slint
frontend/: index.html  package-lock.json  package.json
frontend/public/downloads/: urglance-linux.deb  urglance-linux.rpm
frontend/src/: App.tsx  index.css
frontend/src/components/: Downloads.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  ProductMockup.tsx  TubesBackground.tsx
src/: main.rs  preview.cpp  preview.h
